test/compile-errors/extern-errors.crow
r record extern
	a str
	b list nat64

u union extern
	a str

f void() extern

f void() extern<c>

f str() extern<c>

f void(a str) extern<c>

f<a> void(a a) extern<c>

f void(...a array nat64) extern<c>

some-spec spec
	foo void()

f void() extern<c> some-spec

f void() extern<c> noctx

f void() extern<c> unsafe

g nat() extern<c> global<c>

g nat() global

g nat() global<c> noctx

g nat() global<c> unsafe

g nat() global<c> trusted
